fixed spacing

--- a/css/app.css
+++ b/css/app.css
@@ -1,60 +1,57 @@
 @media (max-width: 1160px) {
-
-    .container {
-        width: 100%;
-    }
-
+  .container {
+    width: 100%;
+  }
 }
 
-
 @media (max-width: 768px) {
-    
-    .container {
-        width: 100%;
-    }
-
+  .container {
+    width: 100%;
+  }
 }
 
 @media (max-width: 480px) {
-    
-    .container {
-        width: 100%;
-    }
+  .container {
+    width: 100%;
+  }
 
-    .row {
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-content: center;
-    }
+  .row {
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+  }
 
-    .lessons .col, .steps .col, .why-us .col-left, .why-us .col-right {
-        width: 100%;
-    }
+  .lessons .col,
+  .steps .col,
+  .why-us .col-left,
+  .why-us .col-right {
+    width: 100%;
+  }
 
-    .card, .why-us .col-left {
-        padding-bottom: 50px;
-    }
+  .card,
+  .why-us .col-left {
+    padding-bottom: 50px;
+  }
 
-    .why-us .col-right {
-        text-align: center;
-    }
+  .why-us .col-right {
+    text-align: center;
+  }
 
-    .why-us {
-        background-color: #222222;
-        margin-bottom: 0;
-        padding-top: 80px;
-    }
+  .why-us {
+    background-color: #222222;
+    margin-bottom: 0;
+    padding-top: 80px;
+  }
 
-    .steps {
-        margin: 0;
-    }
+  .steps {
+    margin: 0;
+  }
 
-    h2 {
-        font-size: 40px;
-    }
+  h2 {
+    font-size: 40px;
+  }
 
-    h1 {
-        font-size: 50px;
-    } */
-
+  h1 {
+    font-size: 50px;
+  }
 }
